<resources>
    <string name="app_name">PTIT Store</string>
    <string name="title_home">Home</string>
    <string name="title_category">Danh mục</string>
    <string name="title_caterory_fragment">Danh mục sản phẩm</string>
    <string name="title_account">Tài khoản</string>
    <string name="title_cart">Giỏ hàng</string>
    <string name="search">Tìm kiếm</string>
    <string name="money_unit"> ₫</string>
    <string name="latest_product">Sản phẩm mới nhất</string>
    <string name="search_not_found">Không có kết quả nào.</string>
    <string name="change_view">Change view</string>
    <string name="total_pay">Tổng cộng</string>
    <string name="thanh_toan">Thanh toán giỏ hàng</string>
    <string name="tiep_tuc_mua_hang">Tiếp tục mua hàng</string>
    <string name="welcome">Xin chào, </string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
</resources>
