<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbargiohang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_gradient"
        android:theme="@style/AppTheme.AppBar.Dark"
        app:title="Giỏ hàng">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/gio_hang_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/toolbargiohang">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textviewthongbao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Giỏ hàng bạn đang trống"
                android:textSize="30sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleViewGioHang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="end">

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:gravity="top"
            android:text="@string/total_pay"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textviewtongtien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="26dp"
            android:text="30000"
            android:textColor="#f20"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@id/product_price_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/money_unit"
            android:textColor="#f20"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonthanhtoangiohang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/total"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/thanh_toan"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>
</RelativeLayout>